--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,15 @@ services:
       - "3000:3000"
     depends_on:
       - mongo
+    command: ["./wait-for-it.sh", "mongo:27017", "--", "npm", "start"]  
+  fastify:
+    build:
+      context: ./search_API
+    ports:
+      - "3030:3030"
+    depends_on:
+      - mongo
+    command: ["./wait-for-it.sh", "mongo:27017", "--", "npm", "start"]    
   mongo:
     build:
       context: ./bdd
