--- a/search_API/Dockerfile
+++ b/search_API/Dockerfile
@@ -11,10 +11,10 @@ COPY package*.json ./
 RUN npm install
 
 # Copy the wait-for-it.sh script to the Docker image
-#COPY wait-for-it.sh ./wait-for-it.sh
+COPY wait-for-it.sh ./wait-for-it.sh
 
 # Make the script executable
-#RUN chmod +x ./wait-for-it.sh
+RUN chmod +x ./wait-for-it.sh
 
 # Copy the rest of the application to the Docker image
 COPY . .
@@ -25,5 +25,5 @@ EXPOSE 3030
 #ENV ADRESS=0.0.0.0 PORT=3030
 
 # Define the command to run the application
-#CMD ["./wait-for-it.sh", "mongo:27017", "--", "npm", "start"]
-CMD ["npm", "start"]
+CMD ["./wait-for-it.sh", "mongo:27017", "--", "npm", "start"]
+#CMD ["npm", "start"]
